--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -919,21 +919,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\BC5WC3BV\\Breshears et al. - Underappreciated plant vulnerabilities to heat wav.pdf;C\:\\Users\\Me\\Zotero\\storage\\RDGLML34\\nph.html}
 }
 
-@article{breshearsUnderappreciatedPlantVulnerabilitiesa,
+@article{breshearsUnderappreciatedPlantVulnerabilities2021,
   title = {Underappreciated Plant Vulnerabilities to Heat Waves},
   author = {Breshears, David D. and Fontaine, Joseph B. and Ruthrof, Katinka X. and Field, Jason P. and Feng, Xiao and Burger, Joseph R. and Law, Darin J. and Kala, Jatin and Hardy, Giles E. St J.},
+  date = {2021},
   journaltitle = {New Phytologist},
-  volume = {n/a},
-  number = {n/a},
+  volume = {231},
+  number = {1},
+  pages = {32--39},
   issn = {1469-8137},
   doi = {10.1111/nph.17348},
-  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17348},
-  urldate = {2021-04-06},
-  abstract = {With climate change, heat waves are becoming increasingly frequent, intense, and broader in spatial extent. However, while lethal effects of heat waves on humans are well documented, the impacts on flora are less well understood, perhaps except for crops. We summarize recent findings related to heat wave impacts including: sub-lethal and lethal effects at leaf and plant scales, secondary ecosystem effects, and more complex impacts such as increased heat wave frequency across all seasons, and interactions with other disturbances. We propose generalizable practical trials to quantify the critical bounding conditions of vulnerability to heat waves. Collectively, plant vulnerabilities to heat waves appear to be underappreciated and understudied, particularly with respect to understanding heat-wave driven plant die-off and ecosystem tipping points.},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17348},
+  urldate = {2021-07-28},
+  abstract = {With climate change, heat waves are becoming increasingly frequent, intense and broader in spatial extent. However, while the lethal effects of heat waves on humans are well documented, the impacts on flora are less well understood, perhaps except for crops. We summarize recent findings related to heat wave impacts including: sublethal and lethal effects at leaf and plant scales, secondary ecosystem effects, and more complex impacts such as increased heat wave frequency across all seasons, and interactions with other disturbances. We propose generalizable practical trials to quantify the critical bounding conditions of vulnerability to heat waves. Collectively, plant vulnerabilities to heat waves appear to be underappreciated and understudied, particularly with respect to understanding heat wave driven plant die-off and ecosystem tipping points.},
   langid = {english},
   keywords = {climate change,die-off,drought,extreme events,heat waves,mortality,warming},
-  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17348},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\PSM8CVDD\\Breshears et al. - Underappreciated plant vulnerabilities to heat wav.pdf;C\:\\Users\\Me\\Zotero\\storage\\UTDVB6LJ\\Breshears et al. - Underappreciated plant vulnerabilities to heat wav.pdf;C\:\\Users\\Me\\Zotero\\storage\\ZNZNNM3W\\nph.html}
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17348},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\4ALKM8NE\\Breshears et al. - 2021 - Underappreciated plant vulnerabilities to heat wav.pdf;C\:\\Users\\Me\\Zotero\\storage\\KELB6W3G\\nph.html}
 }
 
 @article{brodribbViewingLeafStructure2010,
