--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7929,6 +7929,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\BGBJY8GQ\\Scherrer et al. - 2011 - Drought-sensitivity ranking of deciduous tree spec.pdf;C\:\\Users\\Me\\Zotero\\storage\\9PQK7E76\\S0168192311002127.html}
 }
 
+@article{schimelNEONHierarchicallyDesigned2007,
+  title = {{{NEON}}: A Hierarchically Designed National Ecological Network},
+  shorttitle = {{{NEON}}},
+  author = {Schimel, David and Hargrove, William and Hoffman, Forrest and MacMahon, James},
+  date = {2007},
+  journaltitle = {Frontiers in Ecology and the Environment},
+  volume = {5},
+  number = {2},
+  pages = {59--59},
+  issn = {1540-9309},
+  doi = {10.1890/1540-9295(2007)5[59:NAHDNE]2.0.CO;2},
+  url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/1540-9295%282007%295%5B59%3ANAHDNE%5D2.0.CO%3B2},
+  urldate = {2021-07-28},
+  langid = {english},
+  annotation = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/1540-9295\%282007\%295\%5B59\%3ANAHDNE\%5D2.0.CO\%3B2},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QJYW8IBS\\Schimel et al. - 2007 - NEON a hierarchically designed national ecologica.pdf;C\:\\Users\\Me\\Zotero\\storage\\JQFHEF8H\\1540-9295(2007)5[59NAHDNE]2.0.html}
+}
+
 @article{schueppTansleyReviewNo1993,
   title = {Tansley {{Review No}}. 59. {{Leaf Boundary Layers}}},
   author = {Schuepp, P. H.},
