--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -94,7 +94,7 @@ Kristina J. Anderson-Teixeira^1,2^*
 
 Clean version implementing the changes below (198 words):
 
-Rising temperatures are having profound effects on forests; however, it is not well understood how responses vary across forest strata. Here, we review how environmental conditions, leaf temperatures,  and foliar traits and metabolism vary across vertical gradients, shaping whole-tree ecology and ecosystem function. In forests with dense canopies, canopy leaves are exposed to higher solar radiation and evaporative demand than understory leaves, and are therefore at risk of elevated leaf temperature ($T_{leaf}$), particularly when transpirational cooling is curtailed by limited stomatal conductance.  However, foliar traits relevant to shaping $T_{leaf}$ also vary strongly across height or light gradients, partially offsetting the propensity towards elevated $T_{leaf}$ in the upper canopy. Leaf metabolism generally increases with height across the vertical gradient, and tall trees have higher metabolism and growth at both individual and ecosystem levels. Yet, differences in thermal sensitivity and damage thresholds are modest. The implications for tree performance are mixed: whereas larger trees face disproportionate stress during drought, understory trees have fewer cooling mechanisms and may be stifled under hot, humid conditions. As warming continues, large canopy trees will be particularly vulnerable to drought, whereas understory trees will suffer most when the buffering provided by large trees is broken.
+Rising temperatures are having profound effects on forests; however, it is not well understood how responses vary vertically across forest strata. Here, we review how environmental conditions, leaf temperatures,  and foliar traits and metabolism vary across vertical gradients, shaping whole-tree ecology and ecosystem function. In forests with dense canopies, canopy leaves are exposed to higher solar radiation and evaporative demand than understory leaves, and are therefore at risk of elevated leaf temperature ($T_{leaf}$), particularly when transpirational cooling is curtailed by limited stomatal conductance.  However, foliar traits relevant to shaping $T_{leaf}$ also vary strongly across height or light gradients, partially offsetting the propensity towards elevated $T_{leaf}$ in the upper canopy. Leaf metabolism generally increases with height across the vertical gradient, and tall trees have higher metabolism and growth at both individual and ecosystem levels. Yet, differences in thermal sensitivity and damage thresholds are modest. The implications for tree performance are mixed: whereas larger trees face disproportionate stress during drought, understory trees have fewer cooling mechanisms and may be stifled under hot, humid conditions. As warming continues, large canopy trees will be particularly vulnerable to drought, whereas understory trees will suffer most when the buffering provided by large trees is lost.
 
 \newpage
 
@@ -111,7 +111,7 @@ This vertical gradient shapes nearly every aspect of plant metabolism, demograph
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecosystem dynamics, biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
 
 
-**Here, we review how the biophysical environment and biological form and function vary across the vertical canopy gradient in forests.** 
+**Here, we review how the biophysical environment and plant form and function vary across the vertical canopy gradient in forests.** 
 We focus on five key themes (Fig. `r fig_schematic`):
 (1) the biophysical environment;
 (2) leaf temperature ($T_{leaf}$);
@@ -129,7 +129,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 ## The biophysical environment
 
 **The biophysical environment, defined here to include the physical structure of the vegetation and associated physical conditions, varies across the vertical gradient from the forest floor to the top of the canopy (Figs. `r fig_schematic`, `r fig_NEON_vertical`), with physical conditions in large part determined by the structure of the forest.** 
-In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Figs. `r fig_NEON_vertical`-`r SIfig_NEON_all`; Appendix `r appendix_NEON_methods`, Schimel et al. 2007].
+In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Figs. `r fig_NEON_vertical`-`r SIfig_NEON_all`; Appendix `r appendix_NEON_methods`, @schimelNEONHierarchicallyDesigned2007].
 While the focus here is on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer canopy than to height (Parker 1995). 
 
 ![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Height profiles from the growing season are shown for: (a) leaf area density, (b) proportion sun leaves, (c) proportion light incidence, and July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV). Vertical profiles in micrometeorological variables (d-h) at all NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
